Added yeti testing

--- a/build.properties
+++ b/build.properties
@@ -7,10 +7,13 @@ classes.dir = ${build.dir}/classes
 jar.dir = ${build.dir}/jar
 contracts.dir = ${build.dir}/contracts
 
+yeti.lib.dir = c:/yeti/lib
 
 jar.name = stack
 jar.filename = ${jar.name}.jar
 jar.file = ${jar.dir}/${jar.filename} 
 
 cofoja.file = ${lib.dir}/cofoja-1.0-r139.jar
+
+yeti.args = -cofoja -testModules=mperry.Stack -rawlogs -nTests=1000 -gui
 
