--- a/build.xml
+++ b/build.xml
@@ -7,14 +7,14 @@
 
 	<target name="jar" depends="classes, contracts">
 		<jar destfile="${jar.file}">
-			<fileset dir="${contracts.dir}"/>
-			<fileset dir="${classes.dir}"/>
+			<fileset dir="${contracts.dir}" />
+			<fileset dir="${classes.dir}" />
 		</jar>
 	</target>
 
 	<target name="run" depends="jar">
 		<java classname="mperry.StackExample" fork="true">
-			<jvmarg value="-javaagent:${cofoja.file}"/>
+			<jvmarg value="-javaagent:${cofoja.file}" />
 			<classpath>
 				<fileset dir="${lib.dir}" />
 				<fileset dir="${jar.dir}" />
@@ -48,6 +48,19 @@
 
 	<target name="clean">
 		<delete dir="${build.dir}" />
+	</target>
+
+	<target name="test">
+		<java classname="yeti.Yeti" fork="true">
+			<jvmarg line="-javaagent:${cofoja.file}" />
+			<arg line="${yeti.args}" />
+			<classpath>
+				<fileset dir="${lib.dir}" />
+				<fileset dir="${yeti.lib.dir}" />
+				<fileset dir="${jar.dir}" />
+			</classpath>
+		</java>
+
 	</target>
 
 </project>
