--- a/build.properties
+++ b/build.properties
@@ -7,6 +7,8 @@ classes.dir = ${build.dir}/classes
 jar.dir = ${build.dir}/jar
 contracts.dir = ${build.dir}/contracts
 
+test.dir = ${basedir}/tests/src
+
 yeti.lib.dir = c:/yeti/lib
 
 jar.name = stack
@@ -15,5 +17,6 @@ jar.file = ${jar.dir}/${jar.filename}
 
 cofoja.file = ${lib.dir}/cofoja-1.0-r139.jar
 
-yeti.args = -cofoja -testModules=mperry.Stack -rawlogs -nTests=1000 -gui
+yeti.args = -cofoja -testModules=mperry.Account -rawlogs -nTests=1000 -gui
+#yeti.args = -instancesCap=5 -cofoja -testModules=mperry.Account -rawlogs -nTests=10000 -gui -outputUnitTestFile=${test.dir}/T.java
 
